[gd_scene load_steps=3 format=3 uid="uid://legal_panel_ui"]

[ext_resource type="Script" path="res://src/ui/legal/legal_panel_ui.gd" id="1_legal_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.06, 0.065, 0.08, 0.97)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.25, 0.35, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="LegalPanelUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_legal_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "Legal: Terms & Privacy"
horizontal_alignment = 1

[node name="TOSPath" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "TOS: res://docs/tos.md"

[node name="PrivacyPath" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Privacy: res://docs/privacy.md"

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ReloadButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Reload"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OverlayAcceptButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Click/Tap to accept"
flat = true
theme_override_fonts/font_size = 18
focus_mode = 0

[node name="TOS" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="TOSLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TabContainer/TOS"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 320)
bbcode_enabled = true
text = "Terms of Service content will appear here."
fit_content = true
autowrap_mode = 2

[node name="Privacy" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="PrivacyLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TabContainer/Privacy"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 320)
bbcode_enabled = true
text = "Privacy Policy content will appear here."
fit_content = true
autowrap_mode = 2

[node name="AcceptRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AcceptButton" type="Button" parent="MarginContainer/VBoxContainer/AcceptRow"]
layout_mode = 2
text = "Hold to accept (0%)"
custom_minimum_size = Vector2(0, 38)
size_flags_horizontal = 3

[node name="AcceptProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/AcceptRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 0.0
custom_minimum_size = Vector2(0, 24)

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Ready"
